updating body information details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Dorothy fell from the sky into Oz. Oz is home</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Here, there and everywhere</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>ON rainy days i click my feet twice and call for home SIKE Oz is where it's at. Me and the wicked witch from the east like to chill on our brooms drinking tea listening to fleetwoodmac</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>a blend between couch cat and hero battling the final frontier</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Duh! Oz ;)</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I miss being in a team environment where we band together to solve a problem</p>
     </section>
 
     <footer id="footer">
